package com.poo.T6_UsoAvanzado_ClasesObjetos.B_Clases_Abstractas.Practica_1;

public class AppEcommerce {

    public static void main(String[] args) {

        Tienda.iniciarPago();
    }
}