package com.poo.T6_UsoAvanzado_ClasesObjetos.B_Clases_Abstractas.Practica_1;

// Clase Abstracta padre para interactuar con las clases que van a heredar un metodo OBLIGATORIO.
public abstract class MetodoPago {

    protected abstract void procesarPago(double importe);

}